2010-05-26  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/test/test_pb.py:
	* flumotion/twisted/pb.py:
	Add test cases for PingableAvatar.

	Use an explicit clock in PingableAvatar, so that timeouts can be
	tested.

2010-05-26  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/test/test_component_feed.py:
	Marked slow test suite.

2010-05-25  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Sébastien Merle and Julien Le Goff

	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/test/test_component_providers.py:
	Open and stat cachedprovider source file in a separate thread, as
	it is usually located in a network mount and would block the
	reactor, otherwise.
	Closes #1419.

2010-05-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/connections.py:
	We have RecentConnection objects in the model containing the connection
	information as attributes. Pick only the first column and compare the
	text with the manager attribute.
	Fixes #1421

2010-05-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Add missing parameter to event probe

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	We cannot link pads with this return statement here. Delete it and
	remember to check the code before commiting.

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Add .version to the tarball

2010-05-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic (svn:ignore):
	* flumotion/component/decoders (svn:ignore):
	Ignore files on newly created directories

2010-05-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Martinez-Hidalgo

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/decoders (added):
	* flumotion/component/decoders/__init__.py (added):