@@ -25,11 +25,9 @@ Flumotion Perspective Broker using keycards
 Inspired by L{twisted.spread.pb}
 """
 
-import time
-
 from twisted.cred import checkers, credentials
 from twisted.cred.portal import IRealm, Portal
-from twisted.internet import protocol, defer, reactor
+from twisted.internet import protocol, defer
 from twisted.internet import error as terror
 from twisted.python import log, reflect, failure
 from twisted.spread import pb, flavors
@@ -42,6 +40,7 @@ from flumotion.common import log as flog
 from flumotion.common.netutils import addressGetHost
 from flumotion.twisted import reflect as freflect
 from flumotion.twisted import credentials as fcredentials
+from flumotion.twisted.compat import reactor
 
 __version__ = "$Rev$"
 
